--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -7,7 +7,7 @@
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
-  line-height: 1.2;
+  /* line-height: 1.2; */
 }
 
 #root {
