--- a/src/components/sentMessage.module.scss
+++ b/src/components/sentMessage.module.scss
@@ -14,6 +14,7 @@
 .avatar {
     display: block;
     width: 35px;
+    min-width: 35px;
     height: 35px;
     border-radius: 50%;
     background-color: var(--outline-variant-2);
