--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -3,22 +3,31 @@
 ::after {
   text-decoration: none;
   box-sizing: border-box;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
   /* line-height: 1.2; */
 }
-
+*::-webkit-scrollbar {
+  width: 5px;
+  background-color: var(--surface-1);
+}
+*::-webkit-scrollbar-thumb {
+  width: 5px;
+  background-color: var(--surface-4);
+  border-radius: 8px;
+  cursor: pointer;
+}
 #root {
   width: 100vw;
   height: 100vh;
 }
 
 .material-symbols-outlined {
-  font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
+  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
 }
 
 .filled {
-  font-variation-settings: 'FILL' 1, 'wght' 400, 'GRAD' 0, 'opsz' 24;
+  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
 }
