--- a/src/components/Mail.module.scss
+++ b/src/components/Mail.module.scss
@@ -1,7 +1,11 @@
 .mail {
+  overflow: auto;
+  overscroll-behavior: contain;
+  height: 100%;
   & > header {
     display: flex;
     width: 100%;
+
     padding: 24px 16px 0 68px;
     gap: 12px;
     align-items: center;
@@ -13,7 +17,7 @@
     }
   }
   & > main {
-    padding: 24px 16px 0 16px;
+    padding: 24px 16px;
     display: flex;
     gap: 12px;
     flex: 1;
