--- a/src/components/navbar.module.scss
+++ b/src/components/navbar.module.scss
@@ -1,7 +1,11 @@
 .navbar {
   display: flex;
   background: var(--surface-1);
+  border: 1px solid var(--outline-variant-2);
+  -webkit-box-shadow: 2px 18px 110px -3px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 2px 18px 110px -3px rgba(0, 0, 0, 0.4);
+  box-shadow: 2px 18px 110px -3px rgba(0, 0, 0, 0.4);
   border-radius: 100rem;
   padding: 1rem;
-  gap: 1rem;
+  gap: 1.5rem;
 }
