--- a/src/pages/gmail.module.scss
+++ b/src/pages/gmail.module.scss
@@ -3,18 +3,23 @@
   flex-direction: column;
   flex: 1;
   width: 75rem;
-  border-radius: 2rem;
+  border-radius: 1rem;
   background: var(--surface-0);
   color: var(--on-surface);
   overflow: hidden;
   transform-origin: bottom center;
+  border: 1px solid var(--outline-variant-2);
+  -webkit-box-shadow: 2px 18px 110px -3px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 2px 18px 110px -3px rgba(0, 0, 0, 0.4);
+  box-shadow: 2px 18px 110px -3px rgba(0, 0, 0, 0.4);
   & > header {
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
     padding: 1rem;
-    background: var(--surface-2);
+    background: var(--surface-1);
+    border-bottom: 1px solid var(--outline-variant-2);
     & > h1 {
       font-size: 1.25rem;
       line-height: 1.2;
@@ -24,12 +29,16 @@
     display: flex;
     justify-content: end;
     width: 100%;
+    height: calc(100% - 3.5rem);
     flex: 1;
     & > div {
+      overflow: auto;
+      overscroll-behavior: contain;
+      height: 100%;
       display: flex;
       flex-direction: column;
+      min-width: 28.75rem;
       width: 28.75rem;
-      height: 100%;
       background: var(--surface-1);
       border-right: 1px solid var(--outline-variant);
     }
@@ -44,6 +53,7 @@
       width: 100%;
       align-items: center;
       justify-content: center;
+      background: none;
       & p {
         font-size: 1rem;
       }
