--- a/src/pages/messages.module.scss
+++ b/src/pages/messages.module.scss
@@ -3,19 +3,24 @@
   flex-direction: column;
   flex: 1;
   width: 41.5rem;
-  border-radius: 2rem;
+  border-radius: 1rem;
   background: var(--surface-0);
   color: var(--on-surface);
   overflow: hidden;
   transform-origin: bottom center;
+  border: 1px solid var(--outline-variant-2);
+  -webkit-box-shadow: 2px 18px 110px -3px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 2px 18px 110px -3px rgba(0, 0, 0, 0.4);
+  box-shadow: 2px 18px 110px -3px rgba(0, 0, 0, 0.4);
   & > header {
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
     padding: 1rem;
-    background: var(--surface-2);
+    background: var(--surface-1);
     z-index: 3;
+    border-bottom: 1px solid var(--outline-variant-2);
     & > h1 {
       font-size: 1.25rem;
       line-height: 1.2;
@@ -29,26 +34,6 @@
     flex: 1;
     overflow-y: auto;
     overscroll-behavior: contain;
-
-    /* width */
-    &::-webkit-scrollbar {
-      width: 5px;
-    }
-
-    /* Track */
-    &::-webkit-scrollbar-track {
-      background: #f1f1f1;
-    }
-
-    /* Handle */
-    &::-webkit-scrollbar-thumb {
-      background: #888;
-    }
-
-    /* Handle on hover */
-    &::-webkit-scrollbar-thumb:hover {
-      background: #555;
-    }
 
     & > .content {
       position: relative;
