--- a/src/pages/x.module.scss
+++ b/src/pages/x.module.scss
@@ -4,25 +4,19 @@
   flex: 1;
   height: 100%;
   width: 41.5rem;
-  border-radius: 2rem;
+  border-radius: 1rem;
   background: var(--surface-0);
   color: var(--on-surface);
+  border: 1px solid var(--outline-variant-2);
+  -webkit-box-shadow: 2px 18px 110px -3px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 2px 18px 110px -3px rgba(0, 0, 0, 0.4);
+  box-shadow: 2px 18px 110px -3px rgba(0, 0, 0, 0.4);
   overflow: hidden;
   transform-origin: bottom center;
   & .wrapper {
     display: flex;
     flex: 1;
     overflow: auto;
-    &::-webkit-scrollbar {
-      width: 8px;
-      background-color: var(--surface-1);
-    }
-    &::-webkit-scrollbar-thumb {
-      width: 8px;
-      background-color: var(--surface-4);
-      border-radius: 8px;
-      cursor: pointer;
-    }
 
     & .section {
       height: auto;
@@ -39,6 +33,7 @@
     width: 100%;
     padding: 1rem;
     background: var(--surface-1);
+    border-bottom: 1px solid var(--outline-variant-2);
     & > h1 {
       font-size: 1.25rem;
     }
