--- a/src/pages/x.module.scss
+++ b/src/pages/x.module.scss
@@ -36,6 +36,7 @@
     border-bottom: 1px solid var(--outline-variant-2);
     & > h1 {
       font-size: 1.25rem;
+      line-height: 1.2;
     }
   }
 }
