--- a/src/components/dots.module.scss
+++ b/src/components/dots.module.scss
@@ -2,7 +2,7 @@
     width: 5px;
     height: 5px;
     background-color: var(--inverse-surface);
-    border-radius: 1px;
+    border-radius: 100rem;
 }
 
 .wrapper {
@@ -10,8 +10,8 @@
     flex-direction: row;
     align-items: center;
     align-self: flex-start;
-    padding: 10px;
+    padding: 1rem;
     background-color: var(--surface-4);
     gap: 6px;
-    border-radius: 5px;
+    border-radius: 100rem;
 }
