--- a/src/pages/messages.module.scss
+++ b/src/pages/messages.module.scss
@@ -53,7 +53,7 @@
     width: 100%;
     padding: 2rem 3rem 3rem;
     border-top: 1px solid var(--outline-variant-2);
-    gap: 10px;
+    gap: 1rem;
     min-height: 119px;
   }
 }
