--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -24,6 +24,10 @@
   height: 100vh;
 }
 
+body {
+  overflow: hidden;
+}
+
 .material-symbols-outlined {
   font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
 }
